--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@sanity/client": "^6.10.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.23.4",
     "next": "14.0.4",
+    "next-sanity": "^7.0.5",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.5"
+    "react-markdown": "^9.0.1",
+    "rehype-raw": "^7.0.0",
+    "sanity": "^3.23.4",
+    "sass": "^1.69.5",
+    "styled-components": "^6.1.6"
   },
   "devDependencies": {
     "@types/node": "^20",
